src/objects/Pricing_Request_Form__c.object
<CustomObject>
    <description>Object and data fields for requesting pricing or proposal quotes from the Account or the Opportunity</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pricing/Proposal Request Forms</relationshipLabel>
        <relationshipName>Pricing_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_CSL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned CSL:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Pricing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Pricing Manager:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Request_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Proposal_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Proposal Manager:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Request_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <formula>Quote_Completed_By__c</formula>
        <label>Completed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Pricing_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_from_Created_to_Complete__c</fullName>
        <formula>Date_Completed__c  -  Date_of_Request__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days from Created to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_is_request_submitted__c</fullName>
        <label>How is request submitted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing Request Form - New</fullName>
                    <default>true</default>
                    <label>Pricing Request Form - New</label>
                </value>
                <value>
                    <fullName>Previously Requested by Phone</fullName>
                </value>
                <value>
                    <fullName>Previously Requested by Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Large_Quote_Projected_Value_250K__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For all large quotes, please check this box.</inlineHelpText>
        <label>Large Quote (Projected Value &gt;$250K)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrating_From__c</fullName>
        <label>Migrating From:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vision to Inform</fullName>
                </value>
                <value>
                    <fullName>Tiburon to Inform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needed_by_Date__c</fullName>
        <defaultValue>Today() + 20</defaultValue>
        <label>Needed by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Pricing_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Details_Special_Instructions__c</fullName>
        <inlineHelpText>Please include # of licenses and # of people to be trained, if applicable.</inlineHelpText>
        <label>Other Details/Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proactive_Proposal_Materials_Required__c</fullName>
        <label>Proactive Proposal Materials Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procurement_Activity_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procurement Activity</label>
        <referenceTo>Procurement_Activity__c</referenceTo>
        <relationshipLabel>Pricing/Proposal Request Forms</relationshipLabel>
        <relationshipName>Pricing_Proposal_Request_Forms_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Migration?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QUOTE_COMPLETE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be checked after the pricing request is completed and a quote is created.</inlineHelpText>
        <label>QUOTE COMPLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quick_Summary_Basic_Quote__c</fullName>
        <inlineHelpText>The Quick Summary should be used for very basic quotes that can be described in 100 characters or less. i.e. &quot;1 mobile license&quot;</inlineHelpText>
        <label>Quick Summary-Basic Quote</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Completed_By__c</fullName>
        <label>Quote Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price Quote</fullName>
                    <default>true</default>
                    <label>Standard Price Quote</label>
                </value>
                <value>
                    <fullName>Budgetary Estimate</fullName>
                </value>
                <value>
                    <fullName>GSA Quote</fullName>
                </value>
                <value>
                    <fullName>RFP - BAFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rapid_Implementation__c</fullName>
        <label>Rapid Implementation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Additional Information</fullName>
                </value>
                <value>
                    <fullName>Waiting on Approvals</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SUBMIT_PRICING_REQUEST__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Once you have completed the pricing/proposal request form information, check this box to submit the request for processing</inlineHelpText>
        <label>SUBMIT PRICING/PROPOSAL REQUEST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <formula>TEXT(CreatedBy.Sales_Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <description>This is the date that the Quote will be completed. Delayed in response by rep or customer will result in delay of completion</description>
        <inlineHelpText>This is the date that the Quote will be completed. Delay in response by rep or customer will result in delay of completion. This field is editable only by Pricing Managers.</inlineHelpText>
        <label>Target Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Z_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Proposal_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Z_Letter_Information__c</fullName>
        <inlineHelpText>Bullets/Paragraphs that should be included, with anything else which should be called out.</inlineHelpText>
        <label>Letter Information</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Z_Notes_Comments__c</fullName>
        <label>Notes/Comments</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Z_Other_Instructions__c</fullName>
        <inlineHelpText>Pricing breakouts, other special/non-standard instructions, additional agencies if multiple should be listed</inlineHelpText>
        <label>Other Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Z_References_Required__c</fullName>
        <inlineHelpText>List in the order you’d like them to be included</inlineHelpText>
        <label>References Required</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Z_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created</fullName>
                </value>
                <value>
                    <fullName>Transferred to AE/AM</fullName>
                </value>
                <value>
                    <fullName>Waiting on AE</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Waiting on Ops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Z_Time_Elapsed__c</fullName>
        <label>Time Elapsed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Z_What_is_Needed__c</fullName>
        <label>What is Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency Sales Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Contract/SOW</fullName>
                </value>
                <value>
                    <fullName>Data Review</fullName>
                </value>
                <value>
                    <fullName>Demo Book</fullName>
                </value>
                <value>
                    <fullName>Demo Logos</fullName>
                </value>
                <value>
                    <fullName>EULA</fullName>
                </value>
                <value>
                    <fullName>FOIA Request</fullName>
                </value>
                <value>
                    <fullName>Host Agency Acknowledgement Form</fullName>
                </value>
                <value>
                    <fullName>Interface/Enhancement Dive</fullName>
                </value>
                <value>
                    <fullName>Landing Page</fullName>
                </value>
                <value>
                    <fullName>Other (Explain Below)</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>References</fullName>
                </value>
                <value>
                    <fullName>RFP Response</fullName>
                </value>
                <value>
                    <fullName>RFP Specs</fullName>
                </value>
                <value>
                    <fullName>Sales/Change Order</fullName>
                </value>
                <value>
                    <fullName>Sales Transition Document</fullName>
                </value>
                <value>
                    <fullName>Server Sizing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Z_When_is_it_Needed__c</fullName>
        <inlineHelpText>Explain if needed before a meeting with the council, etc. Please do not say ASAP, unless it really is needed today</inlineHelpText>
        <label>When is it Needed?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Pricing/Proposal Request Form</label>
    <listViews>
        <fullName>All_Open_Requests_AM_East_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Assigned_CSL__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE_COMPLETE__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Rejected,Complete</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>Inform AM East</value>
        </filters>
        <label>AM East &lt;$250K - All Open Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Requests_AM_West_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Assigned_CSL__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE_COMPLETE__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Rejected,Complete</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>Inform AM West</value>
        </filters>
        <label>AM West &lt;$250K - All Open Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Requests_Large_Quotes_Only</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Large_Quote_Projected_Value_250K__c</columns>
        <columns>Assigned_Pricing_Manager__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE_COMPLETE__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Rejected,Complete</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Large Quotes &gt;$250K - All Open Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Requests_Large_and_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Large_Quote_Projected_Value_250K__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE_COMPLETE__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled,Rejected,Complete</value>
        </filters>
        <label>All Open Requests (Large and &lt;$250K)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Requests_Open_or_Closed</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Large_Quote_Projected_Value_250K__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Requests (Open or Closed)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brians_911_Pricing_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Z_Status__c</columns>
        <columns>Z_Assigned_To__c</columns>
        <columns>QUOTE_COMPLETE__c</columns>
        <columns>Request_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Z_Assigned_To__c</field>
            <operation>equals</operation>
            <value>Brian Fluegeman</value>
        </filters>
        <filters>
            <field>Z_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled,Deferred</value>
        </filters>
        <label>Brians 911 Pricing Tasks</label>
        <sharedTo>
            <group>Zuercher_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_Requests_AM_East_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Assigned_CSL__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>Inform AM East</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>AM East &lt;$250K - Cancelled Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cancelled_Requests_AM_West_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Assigned_CSL__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>Inform AM West</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>AM West &lt;$250K - Cancelled Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Requests_AM_East_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Assigned_CSL__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE_COMPLETE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>Inform AM East</value>
        </filters>
        <label>AM East &lt;$250K - Completed Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Requests_AM_West_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Assigned_CSL__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE_COMPLETE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>Inform AM West</value>
        </filters>
        <label>AM West &lt;$250K - Completed Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Requests_Large_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Large_Quote_Projected_Value_250K__c</columns>
        <columns>Assigned_Pricing_Manager__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QUOTE_COMPLETE__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Large Quotes &gt;$250K - Completed Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Quotes_250K_Cancelled_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Large_Quote_Projected_Value_250K__c</columns>
        <columns>Assigned_Pricing_Manager__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Large Quotes &gt;$250K - Cancelled Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Large_Quotes_250K_Rejected_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Large_Quote_Projected_Value_250K__c</columns>
        <columns>Assigned_Pricing_Manager__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Large Quotes &gt;$250K - Rejected Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected_Requests_AM_East_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Assigned_CSL__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>Inform AM East</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>AM East &lt;$250K - Rejected Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected_Requests_AM_West_250K</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>Needed_by_Date__c</columns>
        <columns>Assigned_CSL__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Sales_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Team__c</field>
            <operation>equals</operation>
            <value>Inform AM West</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Large_Quote_Projected_Value_250K__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>AM West &lt;$250K - Rejected Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRF-{00000000}</displayFormat>
        <label>Pricing/Proposal Request Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing/Proposal Request Forms</pluralLabel>
    <recordTypes>
        <fullName>TriTech_Pricing_Request_Form</fullName>
        <active>true</active>
        <description>TriTech pricing/proposal request form</description>
        <label>TriTech Pricing Request Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zuercher_Proposal_Request_Form</fullName>
        <active>true</active>
        <description>Zuercher proposal requst form</description>
        <label>Zuercher Proposal Request Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Product_Migration</fullName>
        <active>true</active>
        <description>If Product Migration = True, then choose which product family migration is being done</description>
        <errorConditionFormula>AND (
(  Product_Migration__c = True) ,
ISPICKVAL(Migrating_From__c, &quot;&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Migrating_From__c</errorDisplayField>
        <errorMessage>If this is a product migration, choose which product family migration is being requested</errorMessage>
    </validationRules>
</CustomObject>